feat(gui): add stats ranking viewer (#76)